--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="txt_temperature_font">36sp</dimen>
+    <dimen name="txt_place_font">20sp</dimen>
+    <dimen name="txt_condition_font">24sp</dimen>
 </resources>
