--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.prasanjit.watstheweather.MainActivity">
+    tools:context="com.prasanjit.watstheweather.ui.HomeActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_add_city"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/action_add_city"
+        app:showAsAction="always" />
 </menu>
