navigation from jetpack added

--- a/app/src/main/res/layout/weather_fragment.xml
+++ b/app/src/main/res/layout/weather_fragment.xml
@@ -1,74 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
-                 android:id="@+id/frameLayoutBackground">
-    </FrameLayout>
+   <!-- <FrameLayout
+        android:id="@+id/frameLayoutBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></FrameLayout>-->
+
     <TextView
-            android:text="@string/txt_place"
-            android:layout_width="0dp"
-            android:textSize="@dimen/txt_place_font"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:fontFamily="sans-serif-light"
-            android:id="@+id/txtPlace" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
-            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imvCondition" android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
-            android:contentDescription="@string/src_imv_condition"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtPlace"/>
+        android:id="@+id/txtPlace"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="sans-serif-light"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"
+        android:text="@string/txt_place"
+        android:textSize="@dimen/txt_place_font"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+ <ImageView
+     android:id="@+id/imvCondition"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_marginStart="16dp"
+     android:layout_marginTop="16dp"
+     android:layout_marginEnd="16dp"
+     android:layout_marginBottom="16dp"
+     android:contentDescription="@string/src_imv_condition"
+     app:layout_constraintBottom_toBottomOf="parent"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toBottomOf="@+id/txtPlace"
+     app:layout_constraintVertical_bias="0.25" />
+
+ <TextView
+     android:id="@+id/txtCondition"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_marginStart="16dp"
+     android:layout_marginEnd="16dp"
+     android:layout_marginBottom="16dp"
+     android:fontFamily="sans-serif-light"
+     android:text="@string/txt_condition"
+     android:textSize="@dimen/txt_condition_font"
+     android:textStyle="bold"
+     android:textColor="@android:color/black"
+     app:layout_constraintBottom_toBottomOf="parent"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toBottomOf="@+id/txtTemperature"
+     app:layout_constraintVertical_bias="0.0" />
+
+ <TextView
+     android:id="@+id/txtTemperature"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_marginStart="16dp"
+     android:layout_marginTop="16dp"
+     android:layout_marginEnd="16dp"
+     android:layout_marginBottom="16dp"
+     android:fontFamily="sans-serif-light"
+     android:text="@string/txt_temp"
+     android:textSize="@dimen/txt_temperature_font"
+     android:textStyle="bold"
+     android:textColor="@android:color/black"
+     app:layout_constraintBottom_toBottomOf="parent"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toBottomOf="@+id/imvCondition"
+     app:layout_constraintVertical_bias="0.10" />
+
     <TextView
-            android:text="@string/txt_condition"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txtCondition"
-            android:textColor="@color/white"
-            android:fontFamily="sans-serif-light"
-            android:textSize="@dimen/txt_condition_font"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imvCondition" app:layout_constraintVertical_bias="0.007"
-    />
-    <TextView
-            android:text="@string/txt_temp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txtTemperature"
-            android:textStyle="normal"
-            android:textColor="#FFFFFF"
-            android:fontFamily="sans-serif-light"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:textSize="@dimen/txt_temperature_font"
-            app:layout_constraintBaseline_toBaselineOf="@+id/txtHumidity"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/txt_humidity_font"
-            android:fontFamily="sans-serif-light"
-            android:textColor="@color/white"
-            android:drawableLeft="@mipmap/humid"
-            android:gravity="center"
-            android:id="@+id/txtHumidity"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtCondition" android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintVertical_bias="1.0" app:layout_constraintStart_toEndOf="@+id/txtTemperature"
-            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="1.0"/>
+        android:id="@+id/txtHumidity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:drawableStart="@mipmap/humid"
+        android:fontFamily="sans-serif-light"
+        android:gravity="center"
+        android:textSize="@dimen/txt_humidity_font"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/txtTemperature"
+        app:layout_constraintTop_toBottomOf="@+id/txtCondition"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
