--- a/app/src/main/res/layout/app_bar_weather.xml
+++ b/app/src/main/res/layout/app_bar_weather.xml
@@ -10,14 +10,19 @@
     <com.google.android.material.appbar.AppBarLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:background="@android:color/transparent"
+            android:elevation="0dp">
+            <!-- android:theme="@style/AppTheme.NoActionBar.AppBarOverlay"> -->
 
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay"/>
+                android:background="@drawable/toolbar_bg"
+                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                android:theme="@style/ToolbarTheme"/>
+                <!-- android:background="@drawable/toolbar_bg"
+                app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"/> -->
 
     </com.google.android.material.appbar.AppBarLayout>
 
