--- a/app/src/main/res/layout/content_weather.xml
+++ b/app/src/main/res/layout/content_weather.xml
@@ -7,10 +7,26 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/app_bar_weather"
-        tools:context=".ui.WeatherActivity">
+        tools:context=".ui.WeatherActivity"
+    android:orientation="vertical">
 
-    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
+    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/frameLayout">
     </FrameLayout>
+
+    <fragment
+        android:id="@+id/nav_host_fragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:navGraph="@navigation/mobile_navigation"
+        app:defaultNavHost="true" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:menu="@menu/bottom_nav"/>
 
 </LinearLayout>
